--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav>
         <ul>
           <li>
-            <a href="https://sites.google.com/view/ntan/work" target="blank">
+            <a href="https://www.behance.net/naomitan10" target="blank">
               Portfolio
             </a>
           </li>
