--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="center">
       <img id="logo" src="bunny.png" alt="logo" width="600" />
       <h1>Naomi Tan <br /></h1>
-      <h2>currently @calpoly slo</h2>
+      <h2>student @ Calpoly SLO</h2>
       <p>
         I love designing.<br />
         I've used Figma, Adobe Illustrator,<br />
         Indesign, Photoshop, Premiere Pro, <br />
         and more to make different passion <br />
-        projects. you can check them out <br />
-        in the portfolio link below
+        projects. You can check them out <br />
+        in the portfolio link below:
       </p>
 
       <video autoplay muted loop>
